Navbar spacing fixup

--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ span {
   justify-content: flex-end;
 }
 
+.justify-content-between {
+  justify-content: space-between;
+}
+
 .align-items-center {
   align-items: center;
 }
@@ -159,4 +163,18 @@ footer {
   background-color: #23120b;
   color: #f1f1f1;
   /* opacity: 0.9; */
+}
+
+@media (max-width: 500px) {
+  .projects {
+    grid-template-columns: 1fr;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  form {
+    width: 80%;
+  }
 }
